--- a/app/src/main/res/layout/welcome_page.xml
+++ b/app/src/main/res/layout/welcome_page.xml
@@ -36,6 +36,7 @@
         android:layout_marginBottom="64dp"
         android:lines="3"
         android:textAppearance="?attr/textAppearanceHeadline4"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
